<resources>
    <string name="app_name">Basics</string>
    <string name="description">Scroll down and press any button to start</string>
    <string name="author_name">Author: Bogusława Tlołka</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="person_radio">Person</string>
    <string name="flower_radio">Flower</string>
    <string name="hello">Hello!</string>
    <string name="toast">Toast</string>
    <string name="back">Back</string>
    <string name="text">Text</string>
    <string name="e_mail">E-mail</string>
    <string name="number">Number</string>
    <string name="phone">Phone</string>
    <string name="no_picture">No picture</string>
    <string name="visible">Text visible</string>
    <string name="invisible">Text invisible</string>
    <string name="toast_act_2">Activity 2: Edit texts</string>
</resources>