<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/textTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            app:layout_column="0"
            app:layout_row="0"/>

        <TextView
            android:id="@+id/mailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            app:layout_column="0"
            app:layout_row="3" />

        <EditText
            android:id="@+id/textEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:layout_column="1"
            app:layout_row="0" />

        <EditText
            android:id="@+id/mailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_column="1"
            app:layout_row="1" />

        <EditText
            android:id="@+id/numberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_column="1"
            app:layout_row="2" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            app:layout_column="1"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/toastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/toast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toastButton"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>